[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/world/World.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 0, 0 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 0, 0 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 0, 0 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 0, 0 )

[node name="World" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="Background" type="Node2D" parent="."]

[node name="Collision1" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Collision2" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Collision3" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Collision4" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}
